--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.project">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera" />
+
     <application
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Project"
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.Design.Light.NoActionBar"
         tools:targetApi="31">
 
         <activity
@@ -23,11 +29,15 @@
 
         <activity android:name=".CameraActivity" />
         <activity android:name=".VaccinationActivity" />
-        <activity android:name=".PlayActivity" />
         <activity android:name=".FoodActivity" />
         <activity android:name=".RecordActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".AlarmActivity" />
+        <activity android:name=".CameraActivity2" />
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true"
+            android:exported="false" />
 
     </application>
 
